# WouPass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/desktop/: package.json
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/network/: mod.rs  protocol.rs  server.rs  session_crypto.rs  state.rs
apps/desktop/src/routes/: +page.svelte
apps/extension/: content.css  content.js  manifest.json  popup.html  popup.js
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/app/: app.dart
apps/mobile/lib/app/observers/: app_lifecycle_observer.dart
apps/mobile/lib/core/constants/: app_constants.dart  crypto_constants.dart
apps/mobile/lib/core/crypto/: crypto_service.dart  (+2 more)
apps/mobile/lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/mobile/windows/runner/: Runner.rc  main.cpp
(+70 files in other folders)
