[package]
name = "woupass"
version = "0.1.0"
description = "WouPass Desktop - Zero-knowledge password companion"
authors = ["WouPass Contributors"]
edition = "2021"

[lib]
name = "woupass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Existing
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# New - Async runtime
tokio = { version = "1", features = ["full"] }

# New - Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# New - Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
whoami = "1"
